--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
   --primary-light: #690c0c;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #c2c2c2;
+}
 @layer base {
   html {
     @apply scroll-smooth;
